[package]
name = "mundara"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.16", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
wgpu = "25.0"
winit = { version = "0.30", features = ["android-native-activity"] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
